<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.4.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>assignment1</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>assignment1</name>
	<description>Demo project for Spring Boot</description>

	<properties>
		<student>ParvathiPai</student>
		<project.build.sourceEncoding>
			UTF-8
		</project.build.sourceEncoding>
		<junit_version>5.6.2</junit_version>
		<javaintro_version>00-01</javaintro_version>
		<compiler_version>3.8.1</compiler_version>
		<assembly_version>3.3.0</assembly_version>
		<surefire_version>2.22.1</surefire_version>
		<java.version>11</java.version>
	</properties>
	<repositories>
		<repository>
			<id>jstraub-repository</id>
			<name>javaintro</name>
			<url>https://faculty.washington.edu/jstraub/repository/</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit_version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit_version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>uw.syp.java.javaintro</groupId>
			<artifactId>javaintro</artifactId>
			<version>${javaintro_version}</version>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<directory>src/test/resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${compiler_version}</version>
				<configuration>
					<release>11</release>
					<compilerArgs>--enable-preview</compilerArgs>
					<compilerArgs>
<!--						<arg>-Xlint:all</arg>-->
<!--						<arg>-Xlint:-serial</arg>-->
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
